--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -18,6 +18,7 @@
 
 .header_item {
   display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -52,7 +53,10 @@
   font-size: 0.9em;
   font-weight: 600;
   color: black;
-  padding-top: 8px;
+}
+
+.header_contact span {
+  margin-left: 0.2em;
 }
 
 .header_login {
@@ -62,6 +66,23 @@
   padding: 0.3em 0.6em;
   color: white;
   border-radius: 6px;
+}
+
+.header_user {
+  display: flex;
+  align-items: center;
+  margin-left: 2.4em;
+  cursor: pointer;
+}
+
+.header_user img {
+  width: 25px;
+  margin-right: 0.3em;
+}
+
+.header_user {
+  font-weight: 300;
+  font-size: 1.1em;
 }
 
 .footer {
