--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -73,6 +73,9 @@
   align-items: center;
   margin-left: 2.4em;
   cursor: pointer;
+  font-weight: 300;
+  font-size: 1.1em;
+  position: relative;
 }
 
 .header_user img {
@@ -80,9 +83,20 @@
   margin-right: 0.3em;
 }
 
-.header_user {
-  font-weight: 300;
-  font-size: 1.1em;
+.user_options {
+  position: absolute;
+  top: 2em;
+  left: 0;
+  font-size: 14px;
+  background-color: rgb(255, 255, 255);
+  padding: 0.5em;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+.user_options-active {
+  opacity: 1;
 }
 
 .footer {
