--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,3 +1,286 @@
+.init {
+  height: calc(100vh - 8em);
+  overflow: hidden;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.568);
+  color: white;
+}
+
+.init img {
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.init_content {
+  height: 100%;
+  display: grid;
+  place-content: center;
+}
+
+.init_content h1 {
+  font-family: 'Patrick Hand', cursive;
+  font-size: 4em;
+  margin-bottom: 0.2em;
+}
+
+.init_content p {
+  text-align: center;
+}
+
 .content {
-  margin-top: 6em;
+  background-color: rgb(255, 255, 255);
+  min-height: 50.7px;
+  width: 70%;
+  margin: 0 auto;
+  transform: translateY(-2.1em);
+  position: relative;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.377);
+  margin-bottom: 3em;
+  padding: 1em 1.5em;
+}
+
+.content h2 {
+  font-family: 'Patrick Hand', cursive;
+  font-size: 4em;
+  color: rgb(0, 0, 0);
+  margin: 0.5em;
+}
+
+.content p {
+  margin-bottom: 0.8em;
+  width: 90%;
+  padding-left: 2em;
+}
+
+.content_container-1 {
+  min-height: 400px;
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* heading {
+  text-align: center;
+}
+
+.heading h2 {
+  font-size: 30px;
+}
+
+.heading span {
+  font-size: var(--p-font);
+  color: rgb(2, 166, 70);
+} */
+
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  /* background-color: #2b14d672; */
+  margin-top: 2rem;
+}
+
+.about-img img {
+  width: 80%;
+  border-radius: 0.5rem;
+}
+
+.about-text p {
+  font-size: var(--p-font);
+  font-weight: 400;
+  text-align: justify;
+}
+
+.information {
+  margin: 1rem 0 1.4rem;
+}
+
+.information .info-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.4rem;
+}
+
+.information .info-box .bx {
+  font-size: 22px;
+}
+
+.information .info-box span {
+  font-weight: 400;
+  margin-left: 1rem;
+}
+
+:root {
+  --main-color: #033a80;
+  --bg-color: #fff;
+  --text-color: #0f0c27;
+  --hover: hsl(260, 100%, 51%);
+  --big-font: 3.2rem;
+  --medium-font: 1.8rem;
+  --p-font: 0.941rem;
+}
+
+.content_container-2 {
+  min-height: 400px;
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* heading {
+  text-align: center;
+}
+
+.heading h2 {
+  font-size: 30px;
+}
+
+.heading span {
+  font-size: var(--p-font);
+  color: rgb(2, 166, 70);
+} */
+
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  /* background-color: #2b14d672; */
+  margin-top: 2rem;
+}
+
+.about-img img {
+  width: 80%;
+  border-radius: 0.5rem;
+}
+
+.about-text p {
+  font-size: var(--p-font);
+  font-weight: 400;
+  text-align: justify;
+}
+
+.information {
+  margin: 1rem 0 1.4rem;
+}
+
+.information .info-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.4rem;
+}
+
+.information .info-box .bx {
+  font-size: 22px;
+}
+
+.information .info-box span {
+  font-weight: 400;
+  margin-left: 1rem;
+}
+
+:root {
+  --main-color: #033a80;
+  --bg-color: #fff;
+  --text-color: #0f0c27;
+  --hover: hsl(260, 100%, 51%);
+  --big-font: 3.2rem;
+  --medium-font: 1.8rem;
+  --p-font: 0.941rem;
+}
+
+.content_container-3 {
+  min-height: 500px;
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* heading {
+  text-align: center;
+}
+
+.heading h2 {
+  font-size: 30px;
+}
+
+.heading span {
+  font-size: var(--p-font);
+  color: rgb(2, 166, 70);
+} */
+
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  /* background-color: #2b14d672; */
+  margin-top: 2rem;
+}
+
+.about-img img {
+  width: 80%;
+  border-radius: 0.5rem;
+  
+}
+
+.about-text p {
+  font-size: var(--p-font);
+  font-weight: 400;
+  text-align: justify;
+}
+
+.information {
+  margin: 1rem 0 1.4rem;
+}
+
+.information .info-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.4rem;
+}
+
+.information .info-box .bx {
+  font-size: 22px;
+}
+
+.information .info-box span {
+  font-weight: 400;
+  margin-left: 1rem;
+}
+
+:root {
+  --main-color: #033a80;
+  --bg-color: #fff;
+  --text-color: #0f0c27;
+  --hover: hsl(260, 100%, 51%);
+  --big-font: 3.2rem;
+  --medium-font: 1.8rem;
+  --p-font: 0.941rem;
+}
+
+.testimony__body--show{
+    pointer-events: unset;
+    opacity: 1;
+    transition: opacity 1.5s ease-in-out;
+}
+
+.testimony__img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 50% 30%;
+}
+
+.testimony__texts{
+    max-width: 700px;
+}
+
+.testimony__course{
+    background-color: rgb(46, 248, 174);
+    color: #fff;
+    display: inline-block;
+    padding: 5px;
+}
+
+.testimony__arrow{
+    width: 90%;
+    cursor: pointer;
 }
