--- a/public/css/carrusel.css
+++ b/public/css/carrusel.css
@@ -18,6 +18,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
   
+  
 }
 p{
   padding: 40px;
@@ -36,10 +37,13 @@ p{
 .buttom{
   position: absolute;
   background-color: black;
-  width: 6%;
+  width: 7%;
   top: 70%;
+  left: 203px;
   border-radius: 6px;
-margin: 40px;
+  margin: 40px;
+  cursor:pointer;
+  cursor:hand;
 }
 
 #link{
@@ -67,6 +71,3 @@ margin: 40px;
 .flecha-left {
   left: 0;
 }
-
-
-
