--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -112,17 +112,10 @@ header {
 }
 
 
-.footer{
-  
-  padding: 1em 0 !important;
-  background-color: rgb(2, 155, 243);
-}
-.footer__title{
-  font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-  font-size: 2rem;
-  margin-bottom: 3px;
-}
+
+
+
+/*
 .footer__title{
   color: #fff;
 }
@@ -132,6 +125,7 @@ header {
   align-items: center;
 }
 .nav--footer{
+  display: flex;
   padding-bottom: 20px;
   display: grid;
   gap: 3em;
@@ -168,17 +162,59 @@ header {
   color: white;
   font-size: 1.3em;
 }
+ */
+
+._footer {
+  background-color: rgb(38, 189, 189);
+  padding-bottom: 16px;
+}
+
 
 .imag-conta{
   
-  margin-top: 1px;
-  height: 4.5em;  
-  
+  margin-top: 2px;
+  height: 3em;  
 }
 
 .imag-conta-2{
-  
+  filter: invert();
   margin-top: 1.2em;
   height: 1.2em;  
-  
+  transform: translateY(8px);
+}
+
+.footer_title {
+  color: white;
+  font-size: 2em;
+  margin: 16px;
+}
+
+.footer_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer_list {
+  display: flex;
+  gap: 30px;
+}
+
+.footer_list li {
+  list-style: none;
+}
+
+.footer_list li a img {
+  filter: invert();
+  width: 30px;
+}
+
+.footer_copy {
+  color: white;
+  font-size: 1.2em;
+  margin-top: 16px;
+  border-top: 1px solid white;
+  width: 100%;
+  text-align: center;
+  padding-top: 5px;
 }
